Cambios en combinatoria
Se escribe mejor el teorema del binomio y se explica un poco porque 0^0 =1.

--- a/2020-1/apunte/Cap.01.tex
+++ b/2020-1/apunte/Cap.01.tex
@@ -634,7 +634,7 @@ Otro caso que debemos mencionar es  el de la definición de ``$n$-ésima potenci
 $$
 x^1=x,\qquad x^n= x \cdot x^{n-1} \quad (n\ge 2).
 $$
-Por completitud,  definimos $x^0=1$ cuando $x \ne 0$ y  dejamos indefinido $0^0$. 
+Por completitud,  definimos $x^0=1$. 
 
 %\begin{subsection}{Ejercicios}
 
