--- a/2020-1/apunte/main.tex
+++ b/2020-1/apunte/main.tex
@@ -221,12 +221,15 @@
  	{8pt}{\huge\bfseries\filcenter}
 %%%--------------------------------------------------------------------------	
 
+
+
 %%% algoritmos %%%
+%% Antes: "pip  install Pygments"
+%% Entrar a la configuración del texmaker o Kile y en órdenes de pdflatex poner
+%% pdflatex -shell-escape -synctex=1 -interaction=nonstopmode %.tex
 %\usepackage{minted}
 %\newminted{python}{frame=lines, mathescape} %con eso usar \begin{pythoncode} ... \end{pythoncode}
 %\usepackage{clrscode3e}
-%% Entrar a la configuración del texmaker o Kile y en órdenes de pdflatex poner
-%% pdflatex -shell-escape -synctex=1 -interaction=nonstopmode %.tex
 %% nota, para sistener las fount si o si, se tienen que compilar con XeleTeX %%
 
 
