--- a/2020-1/apunte/Cap.02.tex
+++ b/2020-1/apunte/Cap.02.tex
@@ -825,10 +825,16 @@ formula para $(a+b)^n$ es conocido como el
 \begin{teorema}\label{t3.6}
 Sea $n$ un entero positivo. El coeficiente del termino
 $a^{n-r}b^r$ en el desarrollo de $(a+b)^n$ es el número binomial
-$\binom{n}{r}$. Explícitamente, tenemos
-$$
+$\binom{n}{r}$. Explícitamente,
+\begin{equation*}
 (a+b)^n= \binom{n}{0} a^n + \binom{n}{1} a^{n-1}b+ \binom{n}{2}
-a^{n-2}b^2 + \cdots + \binom{n}{n} b^n.$$
+a^{n-2}b^2 + \cdots + \binom{n}{n} b^n,
+\end{equation*}
+o,  escrito en forma más concisa, 
+\begin{equation}\label{eq-th-bin-1}
+(a+b)^n= \sum_{i=0}^{n}\binom{n}{i} a^{n-i}b^i.
+\end{equation}
+
 \end{teorema}
 \begin{proof}(Primera) Considerar que ocurre cuando
 multiplicamos $n$ factores
@@ -842,6 +848,7 @@ consecuentemente $n-r$ a's), y por definición éste es el número
 binomial $\binom{n}{r}$.
 \end{proof}
 
+
 \begin{observacion}\label{cvar} Antes de hacer una segunda demostración del teorema del binomio veamos el siguiente resultado que nos resultará útil: sea $a_k,a_{k+1},\ldots,a_{m-1},a_m$ una sucesión de números reales ($k \le m$) y sea $r \in \mathbb N_0$.  Entonces
 $$
 \sum_{i=k}^m a_i = \sum_{i=r}^{m-k+r} a_{i+k-r}.
@@ -852,9 +859,24 @@ a_k+a_{k+1}+\cdots+a_{m-1}+a_m.
 $$  
 \end{observacion}
 
+
+\begin{observacion}
+	Por la simetría del número binomial la  fórmula (\ref{eq-th-bin-1}) es equivalente a 
+	\begin{equation*}
+	(a+b)^n= \sum_{i=0}^{n}\binom{n}{n-i} a^{n-i}b^i.
+	\end{equation*}
+	Haciendo  el cambio de variable $i \leftrightarrow n-i$, se obtiene la fórmula equivalente
+	\begin{equation*}\label{eq-th-bin-2}
+	(a+b)^n= \sum_{i=0}^{n}\binom{n}{i} a^ib^{n-i}.
+	\end{equation*}
+	La fórmula anterior es también, muy utilizada para enunciar el teorema del binomio.
+\end{observacion}
+
+
+
 \begin{proof}[Demostración (*)](Segunda) Se hace por inducción en $n$. Si
 $n=1$, el resultado es trivial. Supongamos que el resultado es
-cierto para $n-1$, es decir
+cierto para $n-1$, es decir,  de acuerdo  a la fórmula (\ref{eq-th-bin-1}),
 $$
 (a+b)^{n-1}=\sum_{i=0}^{n-1} \binom{n-1}{i}a ^{n-1-i}b^{i}.
 $$
@@ -864,7 +886,7 @@ Luego
 & = (a+b)\left(\sum_{i=0}^{n-1} \binom{n-1}{i}a ^{n-1-i}b^{i}\right)&&\qquad \text{por hip. inductiva} \\
 &=\sum_{i=0}^{n-1} \binom{n-1}{i}a ^{n-i}b^{i}+\sum_{i=0}^{n-1} \binom{n-1}{i}a ^{n-1-i}b^{i+1}&& \qquad \text{propiedad distributiva}\\
 &=\sum_{i=0}^{n-1} \binom{n-1}{i}a ^{n-i}b^{i}+\sum_{i=1}^{n} \binom{n-1}{i-1}a ^{n-i}b^{i}&& \qquad \text{ver observación \ref{cvar}}\\
-&= a^n + \sum_{i=1}^{n-1}\{ \binom{n-1}{i}+\binom{n-1}{i-1}\}a ^{n-i}b^{i}+ b^n && \qquad \text{agrupar por potencias iguales}\\
+&= a^n + \sum_{i=1}^{n-1}\left\{ \binom{n-1}{i}+\binom{n-1}{i-1}\right\}a ^{n-i}b^{i}+ b^n && \qquad \text{agrupar por potencias iguales}\\
 &= a^n + \sum_{i=1}^{n-1} \binom{n}{i}a ^{n-i}b^{i}+ b^n&&\qquad \text{por teorema 3.4.1} \\
 &= \sum_{i=0}^{n} \binom{n}{i}a ^{n-i}b^{i}.&&\text{}
 \end{alignat*}
@@ -872,19 +894,17 @@ Luego
 
 %
 
-Los coeficientes en el desarrollo pueden por lo tanto ser
-calculados con el método recursivo usado para los números
-binomiales (triángulo de Pascal) o usando la formula. Por ejemplo,
+Los coeficientes en el desarrollo pueden ser calculados con el método recursivo usado para los números binomiales (triángulo de Pascal) o usando la formula. Por ejemplo,
+\begin{equation*}
+	\begin{aligned} (a+b)^6 &= \binom{6}{0} a^6 + \binom{6}{1} a^5 b
+	+\binom{6}{2}a^4b^2 +
+	\binom{6}{3}a^3b^3 \\
+	&\quad + \binom{6}{4}a^2b^4+\binom{6}{5}ab^5\binom{6}{6}b^6 \\
+	&=  a^6 + 6 a^5 b +15a^4b^2 + 20a^3b^3 + 15a^2b^4+6ab^5+ b^6.
+	\end{aligned}
+\end{equation*}
 
 
-$$
-\begin{aligned} (a+b)^6 &= \binom{6}{0} a^6 + \binom{6}{1} a^5 b
-+\binom{6}{2}a^4b^2 +
-\binom{6}{3}a^3b^3 \\
-&\quad + \binom{6}{4}a^2b^4+\binom{6}{5}ab^5\binom{6}{6}b^6 \\
-&=  a^6 + 6 a^5 b +15a^4b^2 + 20a^3b^3 + 15a^2b^4+6ab^5+ b^6.
-\end{aligned}
-$$
 Por supuesto, podemos obtener otras formulas útiles si
 reemplazamos $a$ y $b$ por otras expresiones. Algunos ejemplos
 típicos son:
@@ -904,7 +924,7 @@ porque tiene dos términos. Como los números  \index{expresión
 binómica} $\binom{n}{r}$ aparecen como los coeficientes en el
 desarrollo de $(a+b)^n$, generalmente se los llama, como ya fue dicho, 
 coeficientes binomiales.  
-De todos modos esta claro por la prueba del teorema \ref{t3.6} que
+De todos modos esta claro por la primera prueba del teorema \ref{t3.6} que
 estos números aparecen en este contexto porque representan el
 número de formas de hacer ciertas selecciones. Por esta razón
 continuaremos usando el nombre de números binomiales,
@@ -914,6 +934,21 @@ simbolizan.
 Además de ser extremadamente útil en manipulaciones algebraicas,
 el teorema del binomio puede usarse para deducir identidades en
 que estén involucrados los números binomiales.
+
+\begin{ejemplo} Probemos que 
+	\begin{equation*}
+	\sum_{i=0}^{n}\binom{n}{i} = \binom{n}{0}+\binom{n}{1}+\binom{n}{3}+\cdots+\binom{n}{n}= 2^n.
+	\end{equation*}
+\end{ejemplo}
+\begin{proof}
+	Observar  que $1 + 1 = 2$, luego, por el teorema del binomio,
+	\begin{align*}
+		2^n = (1 +1)^n 
+		    &= \sum_{i=0}^{n} \binom{n}{i}1^{n-i}1^i \\
+		    &= \sum_{i=0}^{n} \binom{n}{i}1 \cdot 1 \\
+		    &= \sum_{i=0}^{n} \binom{n}{i}.
+	\end{align*} 
+\end{proof}
 
 \begin{ejemplo}Probemos que
 \begin{equation}\label{eqcuaddo}
@@ -947,6 +982,27 @@ $\binom{2n}{n}$ que es también el coeficiente de $x^n$ en el
 desarrollo de $(1+x)^{2n}$, y entonces obtenemos la igualdad que
 buscábamos.
 \end{proof}
+
+\vskip .3cm 
+
+\begin{observacion}[Definición de $0^0$] No hay consenso matemático en cual es el valor de $0^0$, pues dependiendo del contexto puede ser conveniente definir su valor de cierta forma o declarar su valor como \textit{indeterminado} (ver el artículo de Wikipedia  \href{https://es.wikipedia.org/wiki/Cero_a_la_cero}{Cero  a la cero}). 
+	
+	Sin embargo,  para su uso  en álgebra, así como en combinatoria se considera conveniente  definir  $0^0 =1$. ¿Cuál es la razón para darle este valor? Existen varias razones, pero una de las más importantes proviene del teorema del binomio: observemos que 
+	\begin{equation*}
+		(1 + x)^n = \sum_{i=0}^{n}\binom{n}{i} x^i
+	\end{equation*}
+	En particular, para $x=0$, la ecuación es
+	\begin{equation*}
+	1^n = \sum_{i=0}^{n}\binom{n}{i} 0^i.
+	\end{equation*}
+	Es claro que para $i>0$, $0^i = 0 \cdot \ldots \cdot 0 =0$, luego la ecuación se reduce a
+	\begin{equation*}
+	1 = 1^n =  0^0.
+	\end{equation*}
+	No sería muy convincente enunciar el teorema del binomio con algunas excepciones poco naturales (como ser, exigir que $a$ y $b$ sean no nulos) y la formulación más general parece ser la correcta. Esta formulación exige que $0^0 =1$, como hemos visto más arriba.
+	
+	Una fundamentación extensa y rigurosa sobre la conveniencia de definir $0^0 =1$ se encuentra en el artículo de D. Knuth \textit{Two notes on notation} que se encuentra en \href{https://arxiv.org/abs/math/9205211}{https://arxiv.org/abs/math/9205211}.
+\end{observacion}
 
 %\begin{subsection}{Ejercicios}
 \subsection*{\Large $\S$ Ejercicios}\label{ej3.6.1}
