--- a/2020-1/practicos/Practico1-2020-soluciones.tex
+++ b/2020-1/practicos/Practico1-2020-soluciones.tex
@@ -112,146 +112,8 @@
 			\rta Por  axioma I10 $a+c -c  <b+c -c$. Por axiomas I6 e I4 obtenemos $a<b$.
 		\end{enumerate}
 		
-		\medskip
-		
-		
-		\item Sea $u_1=3$, $u_2=5$ y $u_n=3 u_{n-1} - 2 u_{n-2}$ con $n\in \mathbb N$, $n\geq 3$.
-		Probar que $u_n=2^n+1$.
-		
-		\rta Para $n=1$ el resultado es verdadero pues $u_1 =3 = 1^1 +1$. Tomaremos el caso  base $n=2$.
-		
-		\textit{(Caso  base) } El resultado es verdadero cuando  $n=2$ pues $u_2 = 5 =2^2+1$.
-		
-		{\it (Paso  inductivo)} Supongamos que $k \ge 2$ y el resultado  es cierto para los $h$ tales que  $1 \le h \le k$. Es decir que $u_h = 2^h+1$ para $1 \le h \le k$ y $k \ge 2$ (hipótesis inductiva),  entonces debemos probar que $u_{k+1} = 2^{k+1}+1$. Ahora bien, 
-		$$
-		\begin{matrix} u_{k+1} &=& 3u_k -2u_{k-1} \hfill &\quad \text{(por definición recursiva)} \hfill \\
-		&=& 3(2^k+1)-2(2^{k-1}+1) \hfill &\quad \text{(por hipótesis inductiva})\hfill \\
-		&=& 3\cdot 2^k+3-2\cdot 2^{k-1}-2 \hfill & \\
-		&=& 3\cdot 2^k+1- 2^{k} \hfill & \\
-		&=& 2\cdot 2^k+1 \hfill & \\
-		&=& 2^{k+1}+1. \hfill & 
-		\end{matrix}
-		$$
-		
-		\smallskip
-		
-		\item Sea $\{ u_n \}_{n \in \mathbb N}$ la sucesión definida por recurrencia como sigue: $u_1 = 9$, $u_2 = 33$, $u_n = 7u_{n-1} - 10u_{n-2}$, $\forall n \geq 3$. Probar que $u_n = 2^{n+1} + 5^n$, para todo $n \in \mathbb N$.
-		
-		
-		\rta Para $n=1$ el resultado es verdadero pues $u_1 = 9 = 2^{1+1} + 5^1$. Tomaremos el caso  base $n=2$.
-		
-		\textit{(Caso  base) }El resultado es verdadero cuando  $n=2$ pues $u_2 = 33 = 2^{2+1} + 5^2$.
-		
-		{\it (Paso  inductivo) } Supongamos que $k \ge 2$ y el resultado  es cierto para los $h$ tales que  $1 \le h \le k$. Es decir que $u_h = 2^{h+1} + 5^h$ para $1 \le h \le k$ y $k \ge 2$ (hipótesis inductiva), entonces debemos probar que $u_{k+1} = 2^{k+2}+5^{k+1}$. Ahora bien, 
-		\begin{equation*}
-			\begin{matrix}
-				u_{k+1} &=& 7u_{k+1-1} - 10u_{k+1-2}  \hfill &\quad \text{(por definición recursiva)} \hfill \\
-				&=& 7u_{k} - 10u_{k-1}  \hfill &\hfill\\
-				&=& 7( 2^{k+1} + 5^k) -10 ( 2^{k-1+1} + 5^{k-1})  \hfill &\quad \text{(por hipótesis inductiva})\hfill \\
-				&=& 7 \cdot  2^{k+1} + 7 \cdot 5^k -10 \cdot  2^{k} -10 \cdot  5^{k-1} \hfill  & \hfill\\
-				&=& 7 \cdot 2 \cdot  2^{k} + 7 \cdot 5 \cdot 5^{k-1} -10 \cdot  2^{k} -10 \cdot  5^{k-1}  \hfill  & \hfill\\
-				&=& (7 \cdot 2 -10 ) \cdot  2^{k} + (7 \cdot 5 -10) \cdot 5^{k-1}  \hfill  & \hfill\\
-				&=& 4 \cdot  2^{k} + 25 \cdot 5^{k-1}  \hfill  & \hfill\\
-				&=& 2^2 \cdot  2^{k} + 5^2 \cdot 5^{k-1}  \hfill  & \hfill\\
-				&=& 2^{k+2} + 5^{k+1}  \hfill  & \hfill
-			\end{matrix}
-		\end{equation*}
-		 
-		
+	
 
-		\smallskip
-		
-		\item\label{ej-suma-2-ala-n} Probar que $\sum_{i=0}^n 2^i = 2^{n+1} -1$ ($n \ge 0$). 
-
-		\rta Haremos inducción sobre $n$. 
-		
-		\textit{(Caso base $n=0$) }  $\sum_{i=0}^0n 2^i = 2^0 = 1 = 2^{+1} -1$.
-		
-		\textit{(Paso inductivo) } Supongamos que $k\ge 0$ y se cumple que  $\sum_{i=0}^k 2^i = 2^{k+1} -1$ (hipótesis inductiva). Probaremos que  $\sum_{i=0}^{k+1} 2^i = 2^{k+2} -1$. Ahora bien, 
-		\begin{equation*}
-			\sum_{i=0}^{k+1} 2^i = \sum_{i=0}^{k} 2^i + 2^{k+1} \overset{\text{(HI)}}{=}  2^{k+1} -1 + 2^{k+1} = 2 \cdot 2^{k+1} -1 = 2^{k+2} -1.
-		\end{equation*}
-		
-		
-		\smallskip
-		
-		\item Sea $u_n$ definida recursivamente por: $u_1=2$, $u_n=2+\sum_{i=1}^{n-1}2^{n-2i}u_i \;\;\forall\; n >1$.
-		\begin{enumerate}
-			\item Calcule $u_2$ y $u_3$.
-			
-			\rta $u_2 = 2+\sum_{i=1}^{1}2^{2-2i}u_i = 2+2^{2-2}u_1 = 2 + u_1 = 4$.
-			
-			$u_3 = 2+\sum_{i=1}^{2}2^{3-2i}u_i = 2+2^{3-2}u_1 + 2^{3-4}u_2=2+2^12 + 2^{-1}4 = 8$.
-			
-			\item Proponga una fórmula para el término general $u_n$ y pruébela por inducción.
-			
-			\rta Probaremos  que $u_n = 2^n$ y lo haremos por inducción completa. 
-			
-			\textit{(Caso base) } Para $n=2$, por \textit{a)}, se cumple $u_2 = 4 =2^2$. 
-			
-			\textit{(Paso inductivo) } Supongamos que $k \ge 1$ y el resultado  es cierto para los $h$ tales que  $1 \le h \le k$,  es decir $u_h=2^h$ para $1 \le h \le k$. Debemos probar que $u_{k+1} = 2^{k+1}$. Ahora bien
-			\begin{equation*}
-			\begin{matrix}
-			u_{k+1} &=& 2+\sum_{i=1}^{k+1-1}2^{k+1-2i}u_i \hfill &\quad \text{(por definición recursiva)} \hfill \\
-			&=& 2+\sum_{i=1}^{k}2^{k+1-2i}u_i \hfill &\hfill\\
-			&=& 2+\sum_{i=1}^{k}2^{k+1-2i}2^i \hfill &\quad \text{(por hipótesis inductiva)}\hfill \\
-			&=& 2+\sum_{i=1}^{k}2^{k+1-2i+ i} \hfill  & \hfill\\
-			&=& 2+\sum_{i=1}^{k}2^{k+1-i} \hfill  & \hfill\\
-			&=& 2+\sum_{j=1}^{k}2^{j} \hfill  &\quad \text{(cambio de variables $j =k +1-i$)}\hfill \\
-			&=& 2+2^{k+1} -2 \hfill  &\quad \text{(por ejercicio \ref{ej-suma-2-ala-n})}\hfill \\
-				&=& 2^{k+1} \hfill  &\quad \hfill
-			\end{matrix}
-			\end{equation*} 
-		\end{enumerate}
-		
-		
-		\smallskip
-		
-		\item Probar las siguientes afirmaciones usando inducción en $n$:
-		\begin{enumerate}
-			\item $n^2\leq 2^n$ para todo $n\in{\mathbb N}$, $n>3$ .
-			
-			\rta  Se probara por inducción sobre $n$. 
-			
-			\textit{(Caso base $n=4$) } En  este caso $4^2 = 16$ y $2^4 = 16$, luego $4^2 \le 2^4$.
-			
-			\textit{(Paso inductivo)} Debemos probar que si para $k \ge 4$ se cumple  que  $k^2\leq 2^k$ (HI),  entonces $(k+1)^2\leq 2^{k+1}$. 
-			\begin{equation*}
-			\begin{array}{rclr}
-				(k+1)^2 &=& k^2 + 2k +1 \overset{\text{(HI)}}{\le} 2^k +2k +1. \hfill &\quad \hfill(*)
-			\end{array}
-			\end{equation*}
-			Por otro lado, $2^{k+1} = 2 \cdot 2^k = 2^k + 2^k$, deberíamos,  entonces,  probar $2^k +2k +1 \le 2^k +2^k$ o equivalentemente, 
-			\begin{equation*}
-			\begin{array}{rclr}
-			2k +1   &\le&2^k. \hfill &\qquad\qquad\qquad\qquad\qquad\qquad \hfill\hfill(**)
-			\end{array}
-			\end{equation*}
-			Para probar esto debemos hacer inducción nuevamente. El caso base es $k=4$, y en ese caso $2\cdot 4+ 1 = 9 \le 2^4 = 16$. En  el paso inductivo debemos probar que $2s+ 1 < 2^s \text{ (HI) } \Rightarrow 2(s+1)+ 1 < 2^{s+1}$. Ahora bien, 
-			\begin{equation*}
-				2(s+1)+ 1  = (2s + 1) +2 \overset{\text{(HI)}}{\le} 2^s + 2 < 2^s + 2^s = 2\cdot 2^s = 2^{s+1}. 
-			\end{equation*}    
-			Luego,  hemos probado $(**)$. Por lo tanto
-			\begin{equation*}
-				(k+1)^2 \overset{(*)}{\le}  2^k +2k +1 \overset{(**)}{\le} 2^k + 2^k = 2^{k+1}.
-			\end{equation*}
-			 
-			
-			%\item $n^3 \le 3^n$;\quad $\forall n \in {\mathbb N}$, $n\ge 3$ .
-			%\item $(n+1)^n < n^{n+1}$; $\forall n \in {\mathbb N}$, $n \ge 3$.
-			\item $\forall n \in {\mathbb N}$,\ $3^n \ge 1 + 2^n$.
-			
-			\rta Inducción sobre $n$.
-			
-			\textit{(Caso base $n=1$) } En este caso $3^1 = 3$ y $1+2^1 = 3$, y se verifica la desigualdad.
-			
-			\textit{(Paso inductivo) } Debemos ver que si para $k \in \mathbb N$, tenemos que   $3^{k} \ge 1 + 2^k$ (HI),  entonces $3^{k+1} \ge 1 + 2^{k+1}$. 
-			\begin{equation*}
-				3^{k+1} = 3^k\cdot 3 \overset{\text{(HI)}}{\le} (1 + 2^k) \cdot 3 = 3 + 3 \cdot 2^k \le 1 + 2\cdot 2^k = 1 + 2^{k+1}.
-			\end{equation*}
-			
-			
-		\end{enumerate}
 		
 		\smallskip
 		
@@ -343,8 +205,70 @@
 		
 		\smallskip
 		
+		\item\label{ej-suma-2-ala-n} Probar que $\sum_{i=0}^n 2^i = 2^{n+1} -1$ ($n \ge 0$). 
 		
-		\item Demostrar por inducción  las siguientes igualdades:
+		\rta Haremos inducción sobre $n$. 
+		
+		\textit{(Caso base $n=0$) }  $\sum_{i=0}^0n 2^i = 2^0 = 1 = 2^{+1} -1$.
+		
+		\textit{(Paso inductivo) } Supongamos que $k\ge 0$ y se cumple que  $\sum_{i=0}^k 2^i = 2^{k+1} -1$ (hipótesis inductiva). Probaremos que  $\sum_{i=0}^{k+1} 2^i = 2^{k+2} -1$. Ahora bien, 
+		\begin{equation*}
+		\sum_{i=0}^{k+1} 2^i = \sum_{i=0}^{k} 2^i + 2^{k+1} \overset{\text{(HI)}}{=}  2^{k+1} -1 + 2^{k+1} = 2 \cdot 2^{k+1} -1 = 2^{k+2} -1.
+		\end{equation*}
+		
+		
+		
+		\smallskip
+		
+		\item Probar las siguientes afirmaciones usando inducción en $n$:
+		\begin{enumerate}
+			\item $n^2\leq 2^n$ para todo $n\in{\mathbb N}$, $n>3$ .
+			
+			\rta  Se probara por inducción sobre $n$. 
+			
+			\textit{(Caso base $n=4$) } En  este caso $4^2 = 16$ y $2^4 = 16$, luego $4^2 \le 2^4$.
+			
+			\textit{(Paso inductivo)} Debemos probar que si para $k \ge 4$ se cumple  que  $k^2\leq 2^k$ (HI),  entonces $(k+1)^2\leq 2^{k+1}$. 
+			\begin{equation*}
+			\begin{array}{rclr}
+			(k+1)^2 &=& k^2 + 2k +1 \overset{\text{(HI)}}{\le} 2^k +2k +1. \hfill &\quad \hfill(*)
+			\end{array}
+			\end{equation*}
+			Por otro lado, $2^{k+1} = 2 \cdot 2^k = 2^k + 2^k$, deberíamos,  entonces,  probar $2^k +2k +1 \le 2^k +2^k$ o equivalentemente, 
+			\begin{equation*}
+			\begin{array}{rclr}
+			2k +1   &\le&2^k. \hfill &\qquad\qquad\qquad\qquad\qquad\qquad \hfill\hfill(**)
+			\end{array}
+			\end{equation*}
+			Para probar esto debemos hacer inducción nuevamente. El caso base es $k=4$, y en ese caso $2\cdot 4+ 1 = 9 \le 2^4 = 16$. En  el paso inductivo debemos probar que $2s+ 1 < 2^s \text{ (HI) } \Rightarrow 2(s+1)+ 1 < 2^{s+1}$. Ahora bien, 
+			\begin{equation*}
+			2(s+1)+ 1  = (2s + 1) +2 \overset{\text{(HI)}}{\le} 2^s + 2 < 2^s + 2^s = 2\cdot 2^s = 2^{s+1}. 
+			\end{equation*}    
+			Luego,  hemos probado $(**)$. Por lo tanto
+			\begin{equation*}
+			(k+1)^2 \overset{(*)}{\le}  2^k +2k +1 \overset{(**)}{\le} 2^k + 2^k = 2^{k+1}.
+			\end{equation*}
+			
+			
+			%\item $n^3 \le 3^n$;\quad $\forall n \in {\mathbb N}$, $n\ge 3$ .
+			%\item $(n+1)^n < n^{n+1}$; $\forall n \in {\mathbb N}$, $n \ge 3$.
+			\item $\forall n \in {\mathbb N}$,\ $3^n \ge 1 + 2^n$.
+			
+			\rta Inducción sobre $n$.
+			
+			\textit{(Caso base $n=1$) } En este caso $3^1 = 3$ y $1+2^1 = 3$, y se verifica la desigualdad.
+			
+			\textit{(Paso inductivo) } Debemos ver que si para $k \in \mathbb N$, tenemos que   $3^{k} \ge 1 + 2^k$ (HI),  entonces $3^{k+1} \ge 1 + 2^{k+1}$. 
+			\begin{equation*}
+			3^{k+1} = 3^k\cdot 3 \overset{\text{(HI)}}{\ge} (1 + 2^k) \cdot 3 = 3 + 3 \cdot 2^k \ge 1 + 2\cdot 2^k = 1 + 2^{k+1}.
+			\end{equation*}
+			
+			
+		\end{enumerate}
+		\smallskip
+		
+		
+		\item\label{ej-induccion} Demostrar por inducción  las siguientes igualdades:
 		\begin{enumerate}
 			\item  $\displaystyle{ \sum_{k=1}^n (a_k + b_k) = \sum_{k=1}^n a_k + \sum_{k=1}^n b_k}$, $n\in \mathbb N$.
 			
@@ -417,7 +341,7 @@
 				&= \left( \frac{(k+1)(k+2)}{2 }\right)^2.
 			\end{align*}
 			
-			\item  $\displaystyle{ \sum_{k=0}^n a^k = \frac{a^{n+1}-1}{a-1}}$, donde $a\in {\mathbb R}$, $a \neq 0,\ 1$, $n\in \mathbb N_0$.
+			\item\label{ej-serie-geometrica}  $\displaystyle{ \sum_{k=0}^n a^k = \frac{a^{n+1}-1}{a-1}}$, donde $a\in {\mathbb R}$, $a \neq 0,\ 1$, $n\in \mathbb N_0$.
 			
 			\rta Esta es llamada la \textit{suma geométrica} y la demostraremos por inducción en $n$.
 			
@@ -575,6 +499,88 @@
 				(k+1)^2 = k^2+2k+1 \overset{\text{(HI)}}{\ge} 11k+3 +2k+1 = 11k + 2k+ 4 \ge 11k +14, 
 			\end{align*}
 			y la última desigualdad es válida pues como  $k\ge 12$,  entonces $2k+ 4 \ge 14$.
+		
+				\medskip
+		
+		
+		\item Sea $u_1=3$, $u_2=5$ y $u_n=3 u_{n-1} - 2 u_{n-2}$ con $n\in \mathbb N$, $n\geq 3$.
+		Probar que $u_n=2^n+1$.
+		
+		\rta Para $n=1$ el resultado es verdadero pues $u_1 =3 = 1^1 +1$. Tomaremos el caso  base $n=2$.
+		
+		\textit{(Caso  base) } El resultado es verdadero cuando  $n=2$ pues $u_2 = 5 =2^2+1$.
+		
+		{\it (Paso  inductivo)} Supongamos que $k \ge 2$ y el resultado  es cierto para los $h$ tales que  $1 \le h \le k$. Es decir que $u_h = 2^h+1$ para $1 \le h \le k$ y $k \ge 2$ (hipótesis inductiva),  entonces debemos probar que $u_{k+1} = 2^{k+1}+1$. Ahora bien, 
+		$$
+		\begin{matrix} u_{k+1} &=& 3u_k -2u_{k-1} \hfill &\quad \text{(por definición recursiva)} \hfill \\
+		&=& 3(2^k+1)-2(2^{k-1}+1) \hfill &\quad \text{(por hipótesis inductiva})\hfill \\
+		&=& 3\cdot 2^k+3-2\cdot 2^{k-1}-2 \hfill & \\
+		&=& 3\cdot 2^k+1- 2^{k} \hfill & \\
+		&=& 2\cdot 2^k+1 \hfill & \\
+		&=& 2^{k+1}+1. \hfill & 
+		\end{matrix}
+		$$
+		
+		\smallskip
+		
+		\item Sea $\{ u_n \}_{n \in \mathbb N}$ la sucesión definida por recurrencia como sigue: $u_1 = 9$, $u_2 = 33$, $u_n = 7u_{n-1} - 10u_{n-2}$, $\forall n \geq 3$. Probar que $u_n = 2^{n+1} + 5^n$, para todo $n \in \mathbb N$.
+		
+		
+		\rta Para $n=1$ el resultado es verdadero pues $u_1 = 9 = 2^{1+1} + 5^1$. Tomaremos el caso  base $n=2$.
+		
+		\textit{(Caso  base) }El resultado es verdadero cuando  $n=2$ pues $u_2 = 33 = 2^{2+1} + 5^2$.
+		
+		{\it (Paso  inductivo) } Supongamos que $k \ge 2$ y el resultado  es cierto para los $h$ tales que  $1 \le h \le k$. Es decir que $u_h = 2^{h+1} + 5^h$ para $1 \le h \le k$ y $k \ge 2$ (hipótesis inductiva), entonces debemos probar que $u_{k+1} = 2^{k+2}+5^{k+1}$. Ahora bien, 
+		\begin{equation*}
+		\begin{matrix}
+		u_{k+1} &=& 7u_{k+1-1} - 10u_{k+1-2}  \hfill &\quad \text{(por definición recursiva)} \hfill \\
+		&=& 7u_{k} - 10u_{k-1}  \hfill &\hfill\\
+		&=& 7( 2^{k+1} + 5^k) -10 ( 2^{k-1+1} + 5^{k-1})  \hfill &\quad \text{(por hipótesis inductiva})\hfill \\
+		&=& 7 \cdot  2^{k+1} + 7 \cdot 5^k -10 \cdot  2^{k} -10 \cdot  5^{k-1} \hfill  & \hfill\\
+		&=& 7 \cdot 2 \cdot  2^{k} + 7 \cdot 5 \cdot 5^{k-1} -10 \cdot  2^{k} -10 \cdot  5^{k-1}  \hfill  & \hfill\\
+		&=& (7 \cdot 2 -10 ) \cdot  2^{k} + (7 \cdot 5 -10) \cdot 5^{k-1}  \hfill  & \hfill\\
+		&=& 4 \cdot  2^{k} + 25 \cdot 5^{k-1}  \hfill  & \hfill\\
+		&=& 2^2 \cdot  2^{k} + 5^2 \cdot 5^{k-1}  \hfill  & \hfill\\
+		&=& 2^{k+2} + 5^{k+1}  \hfill  & \hfill
+		\end{matrix}
+		\end{equation*}
+		
+		
+				
+		\smallskip
+		
+		\item Sea $u_n$ definida recursivamente por: $u_1=2$, $u_n=2+\sum_{i=1}^{n-1}2^{n-2i}u_i \;\;\forall\; n >1$.
+		\begin{enumerate}
+			\item Calcule $u_2$ y $u_3$.
+			
+			\rta $u_2 = 2+\sum_{i=1}^{1}2^{2-2i}u_i = 2+2^{2-2}u_1 = 2 + u_1 = 4$.
+			
+			$u_3 = 2+\sum_{i=1}^{2}2^{3-2i}u_i = 2+2^{3-2}u_1 + 2^{3-4}u_2=2+2^12 + 2^{-1}4 = 8$.
+			
+			\item Proponga una fórmula para el término general $u_n$ y pruébela por inducción.
+			
+			\rta Calculemos el cuarto témino de la sucesión: $u_4 =  2+\sum_{i=1}^{3}2^{4-2i}u_i = 2+2^{4-2}u_1 + 2^{4-4}u_2 + 2^{4-6}u_3= 2+2^2 2 + 2^{0}4 + 2^   {-2}8 = 16$. 
+			
+			Entonces tenemos que $u_1 = 2 = 2^1$, $u_2 = 4 = 2^2$, $u_3 = 8 = 2^3$. Esto nos indica que debería ser $u_n = 2^n$.  y lo haremos por inducción completa. 
+			
+			\textit{(Caso base) } Para $n=2$, por \textit{a)}, se cumple $u_2 = 4 =2^2$. 
+			
+			\textit{(Paso inductivo) } Supongamos que $k \ge 1$ y el resultado  es cierto para los $h$ tales que  $1 \le h \le k$,  es decir $u_h=2^h$ para $1 \le h \le k$. Debemos probar que $u_{k+1} = 2^{k+1}$. Ahora bien
+			\begin{equation*}
+			\begin{matrix}
+			u_{k+1} &=& 2+\sum_{i=1}^{k+1-1}2^{k+1-2i}u_i \hfill &\quad \text{(por definición recursiva)} \hfill \\
+			&=& 2+\sum_{i=1}^{k}2^{k+1-2i}u_i \hfill &\hfill\\
+			&=& 2+\sum_{i=1}^{k}2^{k+1-2i}2^i \hfill &\quad \text{(por hipótesis inductiva)}\hfill \\
+			&=& 2+\sum_{i=1}^{k}2^{k+1-2i+ i} \hfill  & \hfill\\
+			&=& 2+\sum_{i=1}^{k}2^{k+1-i} \hfill  & \hfill\\
+			&=& 2+\sum_{j=1}^{k}2^{j} \hfill  &\quad \text{(cambio de variables $j =k +1-i$)}\hfill \\
+			&=& 2+2^{k+1} -2 \hfill  &\quad \text{(por ej. \ref{ej-suma-2-ala-n} o su generalización, ej. \ref{ej-serie-geometrica})}\hfill \\
+			&=& 2^{k+1} \hfill  &\quad \hfill
+			\end{matrix}
+			\end{equation*} 
+		\end{enumerate}
+		
+		
 		
 		\smallskip
 		
